# Sdl2Fun

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: player.xcf
assets/dev/tileset/: player.xcf
assets/world/testing/: test.json
include/: app.h  asset_manager.h  declaration.h  drawable.h  player.h  renderer.h
include/core/: texture.h
include/libgame/: app.h  asset_manager.h  camera.h  component.h  entity_manager.h  input.h  renderer.h  world.h
include/libgame/system/: input.h  movement.h  system.h
src/: app.cpp  asset_manager.cpp  drawable.cpp  player.cpp  renderer.cpp
src/core/: texture.cpp
src/libgame/: app.cpp  asset_manager.cpp  camera.cpp  entity_manager.cpp  input.cpp  renderer.cpp  world.cpp
src/libgame/system/: input.cpp  movement.cpp
